--- a/aula13/modelo/modelo.html
+++ b/aula13/modelo/modelo.html
@@ -8,12 +8,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <header>
-    <h1>Títulos</h1>
+    <h1>Hora do Dia</h1>
 </header>
 <body>
     <section>
         <div>
-            <p>Testando...</p>
+            <p></p>
 
         </div>
         <div>
