--- a/aula016/ex016/modelo.html
+++ b/aula016/ex016/modelo.html
@@ -13,7 +13,7 @@
 <body>
     <section>
         <div id="dados">
-            <p>Início: <input type="number" name="txti" id="txti">
+            <p>Início: <input type="number" name="inicio" id="txti">
             <p>Fim: <input type="number" name="fim" id="txtf"></p>
             <p>Passo: <input type="number" name="passo" id="txtp"></p>
             <input type="button" value="Contar" onclick="contar()">
