--- a/aula016/ex017/tabuada.html
+++ b/aula016/ex017/tabuada.html
@@ -13,12 +13,15 @@
 <body>
     <section>
         <div>
-            <p></p>
+            <p>Numero: <input type="number" name="num" id="txtn">
+            <input type="button" value="Gerar Tabuada" onclick="tabuada()"></p>
 
         </div>
         <div>
-            <p>olá...</p>
-
+            <select name="tabuada" id="seltab" size="10">
+                <option>Digite um número acima:</option>
+            </select>
+            
         </div>
 
     </section>
